--- a/Demo1/Logic/pom.xml
+++ b/Demo1/Logic/pom.xml
@@ -44,6 +44,10 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-engine</artifactId>
+    </dependency>
 	</dependencies>
 
 	<build>
